--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/tvName"
         android:background="#f00"
         android:layout_width="@dimen/dp_100"
         android:layout_height="@dimen/dp_200"
