--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,23 +8,47 @@
     tools:context=".MainActivity">
 
 
-    <Button
+    <FrameLayout
+        android:layout_marginTop="@dimen/dp_12"
+        app:layout_constraintTop_toBottomOf="@id/ll1"
+        android:id="@+id/flContainer"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="@dimen/dp_120"
+        android:layout_height="@dimen/dp_240"/>
+
+
+    <LinearLayout
+        android:gravity="center"
+        android:id="@+id/ll1"
+        android:layout_marginTop="@dimen/dp_40"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/button1"
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button1"
-        android:layout_marginTop="@dimen/dp_80"
-        />
+        android:layout_height="wrap_content">
+        <Button
 
-    <Button
-        app:layout_constraintTop_toBottomOf="@id/button1"
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button2"
-        app:layout_constraintStart_toStartOf="@id/button1"
-        />
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button1"
+
+            />
+        <Button
+            android:layout_marginLeft="@dimen/dp_24"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/button1"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button2"
+            />
+    </LinearLayout>
+
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
